# excel-api

./: .gitattributes  .gitignore  ABI_ARCHITECTURE.md  AGENTS.md  APPLY_THIS_PACKAGE.md  ARCHITECTURE.md  ARCHITECTURE_INDEX.md  ARRAY_REFERENCE_ARCHITECTURE.md  ASYNC_ARCHITECTURE.md  CALLBACK_LIFECYCLE_ARCHITECTURE.md  CHANGELOG.md  COM_ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING_ARCHITECTURE.md  Cargo.toml  ERROR_ARCHITECTURE.md  EXCELDNA_CAPABILITY_MAP.md  EXCEL_CALL_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  INITIAL_IMPLEMENTATION_NOTES.md  LICENSE-MIT  MAIN_THREAD_DISPATCH_ARCHITECTURE.md  MANIFEST.md  MEMORY_DESIGN_PACKAGE_README.md  MEMORY_OWNERSHIP_ARCHITECTURE.md  MEMORY_OWNERSHIP_ROADMAP.md  NOTICES.txt  OPTIONAL_INTEGRATIONS_ROADMAP.md  PACKAGE_README.md  PACKAGING_ARCHITECTURE.md  PROC_MACRO_ARCHITECTURE.md  README.md  REGISTRATION_ARCHITECTURE.md  RIBBON_UI_ARCHITECTURE.md  RTD_STREAMING_ARCHITECTURE.md  RUNTIME_CONTEXT_ARCHITECTURE.md  SECURITY.md  STRING_ARCHITECTURE.md  STRING_IMPLEMENTATION_ROADMAP.md  SUPPORT_MATRIX.md  (+5 more)
crates/excel-api/: Cargo.toml  README.md
crates/excel-api-macros/: Cargo.toml  README.md
crates/excel-api-macros/src/: lib.rs
crates/excel-api-macros/tests/: trybuild.rs
crates/excel-api-sys/: Cargo.toml  LICENSE-MIT  README.md
crates/excel-api-sys/src/: constants.rs  errors.rs  functions.rs  lib.rs  types.rs
crates/excel-api/src/: async_udf.rs  borrowed.rs  context.rs  convert.rs  diagnostics.rs  dispatcher.rs  error.rs  excel_call.rs  excel_owned.rs  lib.rs  metadata.rs  registration.rs  return_alloc.rs  return_plan.rs  runtime.rs  thunk.rs  value.rs
crates/excel-api/tests/: macro_metadata.rs
examples/minimal-rtd-server/: Cargo.toml
examples/minimal-rtd-server/src/: lib.rs  model.rs  windows_server.rs
examples/minimal-rtd-server/src/windows_server/: abi.rs  automation.rs  diagnostics.rs  server.rs
examples/minimal-xll/: Cargo.toml
examples/minimal-xll/src/: dispatch_demo.rs  lib.rs  ontime_experiment.rs
examples/minimal-xll/tests/snapshots/: m8-generated-metadata.snap
excel-com/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
excel-com/examples/: 01_open_workbook.rs  02_values_and_formulas.rs  03_formatting.rs  04_tables_and_filters.rs  05_chart.rs
excel-com/src/: error.rs  lib.rs
excel-com/src/automation/: argument.rs  array.rs  bstr.rs  conversion_error.rs  currency.rs  date.rs  dispatch.rs  enumerator.rs  excel_error.rs  invocation.rs  message_filter.rs  mod.rs  policy.rs  retry.rs  safearray.rs  value.rs  variant.rs
excel-com/src/excel/: application.rs  areas.rs  autofilter.rs  border.rs  borders.rs  calculation.rs  collection.rs  file_lifecycle.rs  font.rs  formatting.rs  formula.rs  interior.rs  mod.rs  name.rs  names.rs  presentation.rs  range.rs  range_structure.rs  reference.rs  search.rs  session.rs  sort.rs  table.rs  text.rs  validation.rs  workbook.rs  workbooks.rs  worksheet.rs  worksheets.rs
excel-com/src/excel/data/: advanced_filter.rs  helpers.rs  links.rs  mod.rs  types.rs  (+5 more)
excel-com/src/internal/: apartment.rs  com_ptr.rs  mod.rs  path.rs  utf16.rs
excel-com/src/object_model/: member_id.rs  mod.rs  object_id.rs  registry.rs  status.rs
excel-com/tests/: charts_live.rs  collection_navigation_live.rs  compile_fail.rs  conditional_formatting_live.rs  connections_querytables_live.rs  data_transformation_live.rs  external_links_live.rs  fixed_format_export_live.rs  fixture_integrity.rs  fixture_open_live.rs  formula_calculation_live.rs  live.rs  macro_runtime_live.rs  pivot_tables_live.rs  range_formatting_live.rs  reference_names_live.rs  refresh_orchestration_live.rs  release_smoke_live.rs  shapes_images_live.rs  sparklines_live.rs  static_safety.rs  structured_data_live.rs  styles_comments_links_live.rs  text_interchange_live.rs  what_if_live.rs  workbook_file_live.rs  workbook_presentation_live.rs  workbook_queries_live.rs  workbooks_add_baseline_live.rs  worksheet_range_live.rs
excel-com/tests/fixtures/: README.md  blank.xlsm  blank.xlsx  chart-source.xlsx  local-query-source.xlsx  pivot-source.xlsx
excel-com/tests/support/: fixtures.rs  mod.rs
excel-com/tests/ui/: apartment_cannot_cross_thread.rs  apartment_cannot_cross_thread.stderr  attached_cannot_quit.rs  attached_cannot_quit.stderr  borrowed_options_cannot_outlive_range.rs  borrowed_options_cannot_outlive_range.stderr  consuming_close_invalidates_workbook.rs  consuming_close_invalidates_workbook.stderr
tools/excel-com-client-kb/: Cargo.toml
tools/excel-com-client-kb/scripts/: client_control_harness.py  comtypes_diagnostic.py  pywin32_diagnostic.py
tools/excel-com-client-kb/src/: lib.rs  main.rs
tools/excel-com-kb/: Cargo.toml
tools/excel-com-kb/src/: analysis.rs  generate.rs  lib.rs  main.rs  markdown.rs  model.rs  normalize.rs  source.rs  validate.rs
tools/excel-com-kb/tests/: determinism.rs  ingestion.rs  validation.rs
tools/excel-com-microsoft-sample/: Cargo.toml
tools/excel-com-microsoft-sample/cpp/: microsoft_excel_sample.cpp
tools/excel-com-microsoft-sample/src/: main.rs
tools/excel-com-native-abi/: Cargo.toml  README.md
tools/excel-com-native-abi/repro/: Cargo.toml
tools/excel-com-native-abi/src/: main.rs
tools/excel-com-native-control/: CMakeLists.txt  README.md
tools/excel-com-native-control/include/: excel_com_native_control.h
tools/excel-com-native-control/src/: excel_com_native_control.cpp  main.cpp
tools/excel-com-pre-add-delta/: Cargo.toml
tools/excel-com-pre-add-delta/src/: lib.rs  main.rs
tools/excel-com-range-probe/: Cargo.toml
tools/excel-com-range-probe/python/: error_scode_controls.py  python_differential.py
tools/excel-com-range-probe/scripts/: csharp-dynamic-control.ps1
tools/excel-com-range-probe/src/: lib.rs  main.rs  python_differential.rs
tools/excel-com-range-probe/testdata/: controlled-fixture.csv
tools/excel-com-typelib-audit/: Cargo.toml
tools/excel-com-typelib-audit/src/: lib.rs  main.rs
tools/excel-object-model-inventory/: Cargo.toml
tools/excel-object-model-inventory/src/: diff.rs  main.rs  markdown.rs  model.rs  typelib.rs  validate.rs
(+2187 files in other folders)
