[workspace]
resolver = "3"
members = [
    "excel-com",
    "crates/excel-api-sys",
    "crates/excel-api",
    "crates/excel-api-macros",
    "examples/minimal-xll",
    "examples/minimal-rtd-server",
    "tools/excel-object-model-inventory",
]
default-members = [
    "crates/excel-api-sys",
    "crates/excel-api",
    "crates/excel-api-macros",
    "examples/minimal-xll",
]
exclude = ["tools/abi-check", "tools/excel-com-kb"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/evnekdev/excel-api"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
