[package]
name = "excel-com"
version = "0.1.0"
edition = "2024"
description = "Experimental Windows-only Excel COM Automation crate"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["excel", "com", "automation", "windows", "office"]
categories = ["api-bindings", "os::windows-apis"]
include = [
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/examples/**",
    "/src/**",
]

[features]
default = []
# Enables `Application::run_macro`. Macro execution is opt-in because it can
# execute workbook-provided code in the active Excel process.
macro-runtime = []

[dependencies]
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
static_assertions = "1.1"
trybuild = "1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc"]
