[package]
name = "excel-api-macros"
description = "Procedural macros for excel-api"
documentation = "https://docs.rs/excel-api-macros"
readme = "README.md"
keywords = ["excel", "xll", "procedural-macro", "ffi", "office"]
categories = ["development-tools::procedural-macro-helpers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
excel-api = { path = "../excel-api", default-features = false }
trybuild = "1"

[lints]
workspace = true
