[package]
name = "excel-api-sys"
description = "Raw Microsoft Excel C API ABI definitions for Rust"
documentation = "https://docs.rs/excel-api-sys"
readme = "README.md"
keywords = ["excel", "xll", "ffi", "office", "abi"]
categories = ["external-ffi-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
