[package]
name = "excel-api"
description = "Safe Rust abstractions for native Microsoft Excel XLL add-ins"
documentation = "https://docs.rs/excel-api"
readme = "README.md"
keywords = ["excel", "xll", "ffi", "office", "add-in"]
categories = ["api-bindings", "development-tools::ffi"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Enables the procedural attributes re-exported by this crate. This is the
# default stable authoring experience.
default = ["macros"]
# Re-exports `excel_function` and `excel_command` from `excel-api-macros`.
macros = ["dep:excel-api-macros"]
# Experimental, internal-only compatibility research for `xlcOnTime`.
# It is not an autonomous dispatcher mechanism and is not production support.
xlcontime-research = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
# Published docs cover the stable authoring surface; the internal
# `xlcontime-research` probe is deliberately not a docs.rs feature.
features = ["macros"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
excel-api-sys = { path = "../excel-api-sys", version = "0.1.0" }
excel-api-macros = { path = "../excel-api-macros", version = "0.1.0", optional = true }

[lints]
workspace = true
