[package]
name = "excel-api-minimal-rtd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "excel_api_minimal_rtd"
crate-type = ["cdylib", "rlib"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
] }
windows-core = "0.62.2"

[lints]
workspace = true
