[package]
name = "minimal-xll"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
xlcontime-research = ["excel-api/xlcontime-research"]

[dependencies]
excel-api = { path = "../../crates/excel-api" }
excel-api-sys = { path = "../../crates/excel-api-sys" }

[lints]
workspace = true
