[package]
name = "excel-com-client-kb"
version = "0.1.0"
edition = "2024"
publish = false
description = "Deterministic source-derived Excel Python COM client knowledge-base tooling"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

# This research utility remains outside the production workspace and has no
# dependency on any production Automation implementation.
[workspace]
