[package]
name = "excel-com-kb"
version = "0.1.0"
edition = "2024"
publish = false
description = "Deterministic Excel VBA documentation knowledge-base tooling"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
toml = "1.1.3"

[dev-dependencies]
tempfile = "3.27"

# This utility deliberately stays outside the root workspace. It has no path
# dependencies on the production XLL/COM crates and is validated explicitly.
[workspace]
