[package]
name = "excel-com-microsoft-sample"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }

[workspace]
