[package]
name = "excel-com-range-probe"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
] }
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
] }

[workspace]
