[package]
name = "excel-object-model-inventory"
version = "0.1.0"
edition = "2024"
publish = false
description = "Deterministic Excel type-library inventory and documentation generator"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
excel-com = { path = "../../excel-com" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }

[lints]
workspace = true
